--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -53,7 +53,7 @@
           href: container-registry-geo-replication.md
         - name: 注册最佳做法
           href: container-registry-best-practices.md
-    - name: 操作方法指南
+    - name: 操作指南
       expanded: false
       items:
         - name: 注册表操作
@@ -128,7 +128,7 @@
               href: container-registry-diagnostics-audit-logs.md
             - name: 使用 Azure Policy 审核符合性（预览版）
               href: container-registry-azure-policy.md
-        - name: 故障排除
+        - name: 疑难解答
           expanded: false
           items:
             - name: 检测常见问题
@@ -176,7 +176,7 @@
           href: container-registry-tasks-multi-step.md
         - name: 基础映像更新
           href: container-registry-tasks-base-images.md
-    - name: 操作方法指南
+    - name: 操作指南
       expanded: false
       items:
         - name: 使用托管标识访问受保护的资源
@@ -187,6 +187,8 @@
               href: container-registry-tasks-cross-registry-authentication.md
             - name: 使用密钥保管库进行外部身份验证
               href: container-registry-tasks-authentication-key-vault.md
+        - name: 使用资源管理器模板快速运行任务
+          href: container-registry-task-run-template.md
         - name: 使用 Buildpacks 生成映像（预览版）
           href: container-registry-tasks-pack-build.md
         - name: 查看任务日志
@@ -229,7 +231,7 @@
       href: 'https://aka.ms/acr/roadmap'
     - name: 提供产品反馈
       href: 'https://feedback.azure.com/forums/903958-azure-container-registry'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-container-registry'
     - name: 视频
       href: 'https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest'
