--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -223,16 +223,6 @@
               href: virtual-network-network-interface-addresses.md
     - name: 安全性
       items:
-        - name: 使用网络安全组限制访问权限
-          items:
-            - name: Azure 门户
-              href: tutorial-restrict-network-access-to-resources.md
-            - name: Azure PowerShell
-              href: tutorial-restrict-network-access-to-resources-powershell.md
-            - name: Azure CLI
-              href: tutorial-restrict-network-access-to-resources-cli.md
-            - name: 管理网络安全组
-              href: manage-network-security-group.md
         - name: 筛选网络流量
           items:
             - name: Azure 门户
@@ -271,6 +261,8 @@
           href: manage-ddos-protection.md
         - name: 让合作伙伴可以使用“DDoS 防护标准”
           href: ddos-protection-partner-onboarding.md
+        - name: 管理网络安全组
+          href: manage-network-security-group.md
         - name: 安全方案
           items:
             - name: 使用虚拟设备保护网络
@@ -427,7 +419,7 @@
       href: 'https://azure.microsoft.com/pricing/details/virtual-network'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-virtual-network'
     - name: 常见问题解答
       href: virtual-networks-faq.md
