--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -31,6 +31,8 @@
           href: concept-fundamentals-block-legacy-authentication.md
         - name: 标识安全分数
           href: identity-secure-score.md
+        - name: 保护远程辅助角色
+          href: concept-secure-remote-workers.md
         - name: 连续访问评估
           href: concept-fundamentals-continuous-access-evaluation.md
     - name: 组和用户
