--- a/articles/devops-project/toc.yml
+++ b/articles/devops-project/toc.yml
@@ -1,8 +1,8 @@
-- name: Azure DevOps Projects 文档
+- name: Azure DevOps Starter 文档
   href: index.yml
 - name: 概述
   items:
-    - name: 什么是 Azure DevOps Projects？
+    - name: 什么是 Azure DevOps Starter？
       href: overview.md
 - name: 快速入门
   expanded: true
@@ -30,7 +30,7 @@
       maintainContext: true
 - name: 教程
   items:
-    - name: 1 - GitHub 和 DevOps Projects
+    - name: 1 - GitHub 和 DevOps Starter
       href: azure-devops-project-github.md
       maintainContext: true
     - name: 2 - 部署到 VM
