--- a/articles/openshift/toc.yml
+++ b/articles/openshift/toc.yml
@@ -6,57 +6,67 @@
       href: intro-openshift.md
 - name: 教程
   items:
-    - name: 创建和管理 Azure Red Hat OpenShift 群集
-      items:
-        - name: 1 - 创建 Azure Red Hat OpenShift 群集
-          href: tutorial-create-cluster.md
-        - name: 2 - 缩放 Azure Red Hat OpenShift 群集
-          href: tutorial-scale-cluster.md
-        - name: 3 - 删除 Azure Red Hat OpenShift 群集
-          href: tutorial-delete-cluster.md
-- name: 群集管理
-  items:
-    - name: Azure Red Hat OpenShift 群集管理
-      items:
-        - name: 1 - Azure Red Hat OpenShift 群集管理员角色
-          href: cluster-administration-cluster-admin-role.md
-        - name: 2 - 管理安全上下文约束
-          href: cluster-administration-security-context-constraints.md
-- name: 操作方法指南
+    - name: 1 - 创建 Azure Red Hat OpenShift 4 群集
+      href: tutorial-create-cluster.md
+    - name: 2 - 连接到 Azure Red Hat OpenShift 4 群集
+      href: tutorial-connect-cluster.md
+    - name: 3 - 删除 Azure Red Hat OpenShift 4 群集
+      href: tutorial-delete-cluster.md
+- name: 操作指南
   expanded: true
   items:
-    - name: 设置 Azure Red Hat OpenShift 开发环境
-      href: howto-setup-environment.md
-      expanded: true
+    - name: 创建专用 Azure Red Hat OpenShift 4 群集
+      href: create-private-cluster.md
+    - name: 为 Azure Red Hat OpenShift 4 群集配置 DNS 转发
+      href: dns-forwarding.md
+    - name: 为 Azure Red Hat OpenShift 4 群集配置 Azure Active Directory 身份验证
       items:
-        - name: 创建 Azure AD 租户
-          href: howto-create-tenant.md
-        - name: 创建 Azure AD 应用对象和用户
-          href: howto-aad-app-configuration.md
-    - name: Azure Red Hat OpenShift 4.3（预览版）
+        - name: 配置 Azure Active Directory 身份验证 (CLI)
+          href: configure-azure-ad-cli.md
+        - name: 配置 Azure Active Directory 身份验证（门户）
+          href: configure-azure-ad-ui.md
+    - name: 为 Azure Red Hat OpenShift 4 执行监视和日志记录
       items:
-        - name: 创建 Azure Red Hat OpenShift 4.3 群集
-          href: howto-using-azure-redhat-openshift.md
-        - name: 为 Azure Red Hat OpenShift 4.3 设置 Azure Monitor
-          href: howto-azure-monitor-v4.md
-    - name: 在 Azure Red Hat OpenShift 群集中部署独立的 Prometheus
-      href: howto-deploy-prometheus.md
-    - name: 在 Azure Red Hat OpenShift 群集中管理项目
-      href: howto-manage-projects.md
-    - name: 创建专用 Azure Red Hat OpenShift 群集
-      href: howto-create-private-cluster.md
-    - name: 监视和日志记录
-      items:
-        - name: 适用于容器的 Azure Monitor（预览版）
+        - name: Azure Red Hat OpenShift 4 中适用于容器的 Azure Monitor（预览版）
           items:
-            - name: 配置适用于容器的 Azure Monitor
-              href: ../azure-monitor/insights/container-insights-azure-redhat-setup.md
-              maintainContext: true
-            - name: 禁用适用于容器的 Azure Monitor
-              href: ../azure-monitor/insights/container-insights-optout-openshift.md
-              maintainContext: true
-    - name: 在 Azure Red Hat OpenShift 群集中运行特权容器
-      href: howto-run-privileged-containers.md
+            - name: 为 Azure Red Hat OpenShift 4 配置适用于容器的 Azure Monitor（预览版）
+              href: ../azure-monitor/insights/container-insights-azure-redhat4-setup.md
+            - name: 在 Azure Red Hat OpenShift 3.11 中禁用适用于容器的 Azure Monitor（预览版）
+              href: ../azure-monitor/insights/container-insights-optout-openshift-v4.md
+    - name: Azure Red Hat OpenShift 3.11
+      items:
+        - name: 为 Azure Red Hat OpenShift 3.11 设置 Azure Red Hat OpenShift 开发环境
+          href: howto-setup-environment.md
+          expanded: true
+          items:
+            - name: 创建 Azure AD 租户
+              href: howto-create-tenant.md
+            - name: 创建 Azure AD 应用对象和用户
+              href: howto-aad-app-configuration.md
+        - name: 在 Azure Red Hat OpenShift 3.11 群集中部署独立的 Prometheus
+          href: howto-deploy-prometheus.md
+        - name: 在 Azure Red Hat OpenShift 3.11 群集中管理项目
+          href: howto-manage-projects.md
+        - name: 创建专用 Azure Red Hat OpenShift 3.11 群集
+          href: howto-create-private-cluster.md
+        - name: 为 Azure Red Hat OpenShift 3.11 执行监视和日志记录
+          items:
+            - name: Azure Red Hat OpenShift 3.11 中适用于容器的 Azure Monitor（预览版）
+              items:
+                - name: 在 Azure Red Hat OpenShift 3.11 中配置适用于容器的 Azure Monitor
+                  href: ../azure-monitor/insights/container-insights-azure-redhat-setup.md
+                  maintainContext: true
+                - name: 在 Azure Red Hat OpenShift 3.11 中禁用适用于容器的 Azure Monitor
+                  href: ../azure-monitor/insights/container-insights-optout-openshift.md
+                  maintainContext: true
+        - name: 在 Azure Red Hat OpenShift 3.11 中运行特权容器
+          href: howto-run-privileged-containers.md
+        - name: Azure Red Hat OpenShift 3.11 中的群集管理
+          items:
+            - name: 1 - Azure Red Hat OpenShift 3.11 群集管理员角色
+              href: cluster-administration-cluster-admin-role.md
+            - name: 2 - 在 Azure Red Hat OpenShift 3.11 中管理安全性上下文约束
+              href: cluster-administration-security-context-constraints.md
 - name: 参考
   items:
     - name: Azure Red Hat OpenShift CLI
@@ -67,10 +77,12 @@
   items:
     - name: 常见问题
       href: openshift-faq.md
-    - name: 故障排除
+    - name: 疑难解答
       href: troubleshoot.md
-    - name: 支持的资源
+    - name: Azure Red Hat OpenShift 3.11 支持的资源
       href: supported-resources.md
+    - name: Azure Red Hat OpenShift 4.3 支持的资源
+      href: support-policies-v4.md
     - name: 区域可用性
       href: 'https://azure.microsoft.com/regions/services/'
     - name: Red Hat OpenShift 文档
