--- a/articles/cost-management-billing/reservations/index.yml
+++ b/articles/cost-management-billing/reservations/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: bandersmsft
   ms.author: banders
-  ms.date: 02/13/2020
-  ms.openlocfilehash: 6d2a654fc584a45335b02763ade5a215964652c4
-  ms.sourcegitcommit: ea006cd8e62888271b2601d5ed4ec78fb40e8427
+  ms.date: 04/30/2020
+  ms.openlocfilehash: 648ba197fd30771061f6629fb834bd3dd95cab40
+  ms.sourcegitcommit: 1895459d1c8a592f03326fcb037007b86e2fd22f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/14/2020
-  ms.locfileid: "81382837"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82628582"
 landingContent:
 - title: 购买预留
   linkLists:
@@ -31,7 +31,7 @@ landingContent:
     links:
     - text: 续订预留
       url: reservation-renew.md
-    - text: SQL 数据仓库
+    - text: Azure Synapse Analytics
       url: prepay-sql-data-warehouse-charges.md
     - text: 虚拟机
       url: ../../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/cost-management-billing/reservations/toc.json
@@ -61,7 +61,7 @@ landingContent:
       url: understand-cosmosdb-reservation-charges.md
     - text: SQL 数据库预留容量
       url: understand-reservation-charges.md
-    - text: SQL 数据仓库
+    - text: Azure Synapse Analytics
       url: reservation-discount-azure-sql-dw.md
     - text: Azure 数据资源管理器
       url: understand-azure-data-explorer-reservation-charges.md
