--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -8,6 +8,8 @@
       href: sql-data-warehouse-overview-what-is.md
     - name: Azure Synapse Analytics 体系结构
       href: massively-parallel-processing-mpp-architecture.md
+    - name: 数据仓库单位数
+      href: what-is-a-data-warehouse-unit-dwu-cdwu.md
     - name: 备忘单
       href: cheat-sheet.md
     - name: 最佳做法
@@ -395,7 +397,7 @@
       href: 'https://feedback.azure.com/forums/307516-sql-data-warehouse/'
     - name: 服务更新
       href: 'https://azure.microsoft.com/updates/?product=sql-data-warehouse'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-sqldw/'
     - name: 支持
       href: sql-data-warehouse-get-started-create-support-ticket.md
