--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -214,6 +214,7 @@
             - name: 网页
               items:
                 - name: 客户端 JavaScript
+                  displayname: 'SPA, Single Page Applications, React, JS, Angular'
                   href: app/javascript.md
                 - name: 用于 JavaScript 的源映射
                   href: app/source-map-support.md
@@ -441,6 +442,11 @@
               href: app/custom-data-correlation.md
             - name: 连接字符串
               href: app/sdk-connection-string.md
+            - name: 连接字符串
+              href: app/sdk-connection-string.md
+            - name: GetMetric
+              displayname: 'get metric, custom metrics, metrics, TrackMetric'
+              href: app/get-metric.md
             - name: 特殊主题
               items:
                 - name: 对 Web 应用和服务进行深度诊断
