--- a/articles/frontdoor/index.yml
+++ b/articles/frontdoor/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 03/03/2020
-  ms.openlocfilehash: 396b416d2c2fae101fee4ba64d85375e6d3da794
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 4bdb7c1765bdbd170d06eaef44b7578d1ddebedc
+  ms.sourcegitcommit: eaec2e7482fc05f0cac8597665bfceb94f7e390f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "79471432"
+  ms.lasthandoff: 04/29/2020
+  ms.locfileid: "82509629"
 landingContent:
 - title: 了解 Azure Front Door
   linkLists:
@@ -23,6 +23,8 @@ landingContent:
     links:
     - text: 什么是 Azure Front Door？
       url: front-door-overview.md
+    - text: 新增功能
+      url: front-door-whats-new.md
 - title: 创建 Front Door
   linkLists:
   - linkListType: quickstart
@@ -69,3 +71,17 @@ landingContent:
     links:
     - text: Azure 负载均衡
       url: front-door-lb-with-azure-app-delivery-suite.md
+- title: 配置规则引擎
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 什么是规则引擎？
+      url: front-door-rules-engine.md
+    - text: 规则引擎匹配条件
+      url: front-door-rules-engine-match-conditions.md
+    - text: 规则引擎操作
+      url: front-door-rules-engine-actions.md
+  - linkListType: tutorial
+    links:
+    - text: 设置规则引擎配置
+      url: front-door-tutorial-rules-engine.md
