--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -6,6 +6,10 @@
       href: overview-iot-central.md
     - name: UI 教程
       href: overview-iot-central-tour.md
+    - name: 最新更新
+      items:
+        - name: 2020 年 3 月
+          href: 'https://azure.microsoft.com/updates/azure-iot-central-march-2020-updates/'
 - name: 快速入门
   expanded: true
   items:
@@ -127,6 +131,14 @@
               href: howto-show-hide-chat.md
 - name: 资源
   items:
+    - name: 最新更新（查询）
+      href: 'https://azure.microsoft.com/updates/?category=iot&query=azure%20iot%20central'
+    - name: 最新更新（或列表...）
+      items:
+        - name: 2020 年 4 月
+          href: 'https://azure.microsoft.com//updates/new-iot-central-pricing-plans/'
+        - name: 2020 年 3 月
+          href: 'https://azure.microsoft.com//updates/new-iot-central-pricing-plans/'
     - name: 支持和帮助选项
       href: /azure/iot-fundamentals/iot-support-help
     - name: 行业应用程序模板
