--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: 什么是 Azure Front Door？
       href: front-door-overview.md
+    - name: Azure Front Door 中的新增功能
+      href: front-door-whats-new.md
 - name: 快速入门
   expanded: true
   items:
@@ -17,6 +19,8 @@
       href: front-door-custom-domain-https.md
     - name: 为 Front Door 设置地区筛选策略
       href: front-door-tutorial-geo-filtering.md
+    - name: 设置规则引擎
+      href: front-door-tutorial-rules-engine.md
 - name: 示例
   items:
     - name: 资源管理器模板
@@ -53,7 +57,13 @@
       href: front-door-url-redirect.md
     - name: 通配符域
       href: front-door-wildcard-domain.md
-- name: 操作方法指南
+    - name: 规则引擎
+      href: front-door-rules-engine.md
+    - name: 规则引擎匹配条件
+      href: front-door-rules-engine-match-conditions.md
+    - name: 规则引擎操作
+      href: front-door-rules-engine-actions.md
+- name: 操作指南
   items:
     - name: 重定向流量
       items:
@@ -63,7 +73,7 @@
       items:
         - name: 载入根或顶点域
           href: front-door-how-to-onboard-apex-domain.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 排查路由问题
           href: front-door-troubleshoot-routing.md
